# Branchat

./: .gitignore  CMakeLists.txt  LICENSE  Models.cpp  README.md  main.cpp
APIs/Headers/: AIAPI.h  DBAPI.h
APIs/Sources/: AIAPI.cpp  DBAPI.cpp
Dependencies/nanodbc/: nanodbc.cpp
GUI/: GUI.cpp  GUI.h
Models/: Base.cpp  Chat.cpp  Group.cpp  Message.cpp  Root_Chat.cpp  Tree.cpp
Models/Headers/: Base.h  Chat.h  Group.h  Message.h  Root_chat.h  Tree.h
Models/Sources/: Base.cpp  Chat.cpp  Group.cpp  Message.cpp  Root_Chat.cpp  Tree.cpp
Secrets/: conString.txt
Services/: dbAPI.cpp
Services/Headers/: Session.h
Services/Sources/: Session.cpp
Session/: Session.cpp  Session.h
git/: .gitignore
